商品管理增加库存 原价 折后价

--- a/src/container/admin/goodsInfoManage/index.less
+++ b/src/container/admin/goodsInfoManage/index.less
@@ -17,4 +17,22 @@
   .main_image, .detail_image {
     margin-top: 20px;
   }
+
+  .block {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    word-break: keep-all;
+    white-space: nowrap;
+  }
+
+  .operator {
+    display: flex;
+    flex-direction: row-reverse;
+
+    .el-button {
+      margin: 5px;
+    }
+  }
 }
